# protopyp

./: .copier-answers.yml  .dockerignore  .gitignore  Makefile  README.md  constraints.txt  init_env.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pypackage.yml
constraints/: global.txt
requirements/: build.txt  dev.txt  run.txt  tox.txt
src/protopyp/: __main__.py
template/: .coveragerc.jinja  .gitignore.jinja  Makefile.jinja  README.md.jinja  constraints.txt  copier.yml  init_env.sh.jinja  pyproject.toml.jinja  setup.cfg.jinja  tox.ini.jinja
template/requirements/: dev.txt
template/tests/: test_{{project_name}}.py.jinja
tests/: test_protopyp.py  test_template.py
