[metadata]
name = protopyp
version = attr: protopyp._version.version
description = A prototype for python project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = Private :: Do not upload to PyPI

[options]
install_requires =
    more-itertools
package_dir=
    =src

[options.packages.find]
where = src

[options.package_data]
protopyp = py.typed
