[metadata]
name = protopyp
version = attr: protopyp._version.version
description = A prototype for python projects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = Private :: Do not upload to PyPI

[options]
install_requires =
    copier
package_dir=
    =src

[options.entry_points]
console_scripts =
    protopyp = protopyp.__main__.main

[options.packages.find]
where = src

[options.package_data]
protopyp = py.typed
